Safari fix for the best wrapping (like in Chrome and others)

--- a/themes/default/notes/css/style.css
+++ b/themes/default/notes/css/style.css
@@ -219,6 +219,8 @@ body{
 */
 /* priting end */
 
+pre{
+    word-wrap:normal;
 p {
     font: 400 16px/1.5 Georgia;
 }
